Update default video directory

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "VERBOSE = True\n",
-    "VIDEO_DIR = Path(\"videos\")\n",
+    "VIDEO_DIR = Path(\"demo\")\n",
     "OUT_DIR = Path(\"output\")\n",
     "NUM_PARAPHRASES = 5\n",
     "TTS_ARGS = VoiceCraftArgs.constructor(padding=\"end\", num_samples=5)"
