Fix CUDA OOM problems

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -25,7 +25,7 @@
     "from src.alacen.tts.voicecraft.voicecraft import VoiceCraftTTS, VoiceCraftArgs\n",
     "from src.alacen.lipsync.diff2lip.diff2lip import Diff2Lip, Diff2LipArgs\n",
     "\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "device = \"cuda:3\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "asr = Whisper()\n",
     "paraphrase = PegasusAlacen()\n",
