--- a/run.ipynb
+++ b/run.ipynb
@@ -106,7 +106,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2024-06-17 21:39:43,853 | alacen.alacen.session | DEBUG] Extracting audio from video...\n"
+      "[2024-06-17 22:15:56,935 | alacen.alacen.session | DEBUG] Extracting audio from video...\n"
      ]
     },
     {
@@ -120,9 +120,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2024-06-17 21:39:44,129 | alacen.alacen.session | DEBUG] Performing speech recognition...\n",
-      "[2024-06-17 21:39:48,644 | alacen.alacen.session | DEBUG] Transcript:  smoked so much weed he actually had to write a song called, hey, what's my motherfucking name?\n",
-      "[2024-06-17 21:39:48,648 | alacen.alacen.session | DEBUG] Generating paraphrase...\n"
+      "[2024-06-17 22:15:57,259 | alacen.alacen.session | DEBUG] Performing speech recognition...\n",
+      "[2024-06-17 22:16:01,823 | alacen.alacen.session | DEBUG] Transcript:  smoked so much weed he actually had to write a song called, hey, what's my motherfucking name?\n",
+      "[2024-06-17 22:16:01,825 | alacen.alacen.session | DEBUG] Generating paraphrase...\n"
      ]
     },
     {
@@ -130,19 +130,19 @@
      "output_type": "stream",
      "text": [
       "Please choose the best paraphrase among the following:\n",
-      "1. He used excessive marijuana and had to write a song called \"Hey, what's my mother's maiden name?\"\n",
-      "2. It seems he was heavily involved in marijuana use, and he had to compose a song about it.\n",
-      "3. He used a lot of marijuana and wrote a song about it, which was quite challenging.\n",
-      "4. He used a lot of marijuana, and he ended up writing a song called \"I'm Not Gonna Let You Take My Name.\"\n",
-      "5. He'd been using a lot of marijuana, and he'd had to compose a song called \"Excuse me, but I'm not sure I understand your name.\"\n",
-      "Selected paraphrase: He used excessive marijuana and had to write a song called \"Hey, what's my mother's maiden name?\"\n"
+      "1. He used a lot of marijuana, and it made it difficult for him to write a song.\n",
+      "2. He was so high on marijuana that he had to write a song called \"Hey, what's my mother's maiden name?\"\n",
+      "3. He struggled with excessive use of marijuana, and it led to the creation of a song called \"I'm Yours.\"\n",
+      "4. He used a lot of marijuana, and he actually had to write a song called \"I'm not sure what my name is.\"\n",
+      "5. He used a lot of marijuana, and it led to the creation of a song called \"Hey, I'm not sure what my name is.\"\n",
+      "Selected paraphrase: He was so high on marijuana that he had to write a song called \"Hey, what's my mother's maiden name?\"\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2024-06-17 21:40:28,955 | alacen.alacen.session | DEBUG] Generating new audio...\n",
+      "[2024-06-17 22:16:25,111 | alacen.alacen.session | DEBUG] Generating new audio...\n",
       "WARNING:phonemizer:words count mismatch on 300.0% of the lines (3/1)\n",
       "WARNING:phonemizer:words count mismatch on 300.0% of the lines (3/1)\n",
       "WARNING:phonemizer:words count mismatch on 300.0% of the lines (3/1)\n",
@@ -165,7 +165,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2024-06-17 21:41:55,830 | alacen.alacen.session | DEBUG] Generating lip-synced video...\n",
+      "[2024-06-17 22:18:19,733 | alacen.alacen.session | DEBUG] Generating lip-synced video...\n",
       "DEBUG:alacen.alacen.session:Generating lip-synced video...\n"
      ]
     },
@@ -173,12 +173,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MPI.COMM_WORLD.Get_rank() 1\n",
-      "os.environ[\"CUDA_VISIBLE_DEVICES\"] 1\n",
-      "MPI.COMM_WORLD.Get_rank() 2\n",
-      "os.environ[\"CUDA_VISIBLE_DEVICES\"] 2\n",
       "MPI.COMM_WORLD.Get_rank() 0\n",
       "os.environ[\"CUDA_VISIBLE_DEVICES\"] 0\n",
+      "MPI.COMM_WORLD.Get_rank() 2\n",
+      "os.environ[\"CUDA_VISIBLE_DEVICES\"] 2\n",
+      "MPI.COMM_WORLD.Get_rank() 1\n",
+      "os.environ[\"CUDA_VISIBLE_DEVICES\"] 1\n",
       "Recovering from OOM error; New batch size: 32\n",
       "Recovering from OOM error; New batch size: 32\n",
       "Recovering from OOM error; New batch size: 32\n",
@@ -188,16 +188,16 @@
       "Recovering from OOM error; New batch size: 8\n",
       "Recovering from OOM error; New batch size: 8\n",
       "Recovering from OOM error; New batch size: 8\n",
-      "Time taken for sampling,  52.358367919921875 ,time without all  gather,  49.706438064575195 ,frames/gpu,  117 ,total frames,  117\n",
-      "(77141,) (117, 720, 1280, 3)\n",
-      "(74880,) (117, 720, 1280, 3)\n"
+      "Time taken for sampling,  54.34663701057434 ,time without all  gather,  50.214728116989136 ,frames/gpu,  120 ,total frames,  120\n",
+      "(88000,) (120, 720, 1280, 3)\n",
+      "(76800,) (120, 720, 1280, 3)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2024-06-17 21:45:40,402 | alacen.alacen.session | DEBUG] Merging generated audio and video...\n",
+      "[2024-06-17 22:22:08,574 | alacen.alacen.session | DEBUG] Merging generated audio and video...\n",
       "DEBUG:alacen.alacen.session:Merging generated audio and video...\n"
      ]
     },
